# estudo-cpp

a_tour_cpp/: 01_exemplo.cpp  02_exemplo.cpp  03_exemplo.cpp  04_exemplo.cpp  05_exemplo.cpp  06_exemplo.cpp  07_exemplo.c  07_exemplob.c  07_exemploc.c  08_exemplo.cpp  09_exemplo.cpp  Makefile  README.md  new.sh  update-makefile.sh
area/01/: README.md  main.cpp
box2d/01/: Makefile  README.md  main.cpp
box2d/02/: Makefile  README.md  main.cpp
box2d/03/: README.md  main.cpp
box2d/04/: Makefile  README.md  main.cpp
box2d/05/: README.md  build.lua  compile_commands.json  main.cpp
cmake/01/: .gitignore  CMakeLists.txt
cmake/01/src/: main.cpp
cmake/02/: CMakeLists.txt
concepts/01/: .gitignore  main.cpp
coulumb/01/: main.cpp
daily/: 01-ternary_operator.md  README.md
daily/k0/: Makefile  main.cpp
daily/k1/: main.cpp
daily/k2/: main.cpp
daily/kiko/: main  main.cpp
escopo/01-ex/: Makefile  README.md  main.cpp
escopo/02-ex/: README.md  main.cpp
ffmpeg/01/: CMakeLists.txt  Makefile  ffmpeg_job.hpp  main.cpp  unix_command.hpp
files/01/: Makefile  exemplo.txt  main.cpp
files/02/: Makefile  README.md  exemplo01.c  exemplo02.cpp
grafo/01/: Makefile  README.md  main.cpp
grafo/02/: README.md  main.c
heranca/01/: README.md  main.cpp
maple/01/: README.md  main.c
maple/02/: Makefile  main.c
maple/03/: Makefile  README.md  maple_analysis.sh
maple/04/: Makefile  advanced_analysis.sh  maple_explorer.cpp
matrix/: a.cpp  b.cpp  c.cpp  d.cpp
modulos/01/: Makefile  README.md  main  math_utils.ixx
modulos/01/gcm.cache/: math_utils.gcm
move/01/: CMakeLists.txt
move/com_move/: .yabs
move/sem_move/: README.md  main.cpp
ngspice/01/: Makefile  README.md  main.cpp  main.cpp.2  main.cpp.3
observer/01/: main.cpp
observer/02/: main.cpp
octave/01/: Makefile  README.md  meucodigo.cpp
octave/02/: Makefile  deb  meucodigo.cpp  usage.oc
octave/03/: .gitignore  Makefile  README.md  compile_commands.json  det3x3.cpp  usage.oc
opencv/01/: Makefile  astyle.cfg  main.cpp
opengl/01/: Makefile  main.cpp
opengl/aulas/01-ex/: README.md  main.cpp
opengl/aulas/02-ex/: main.cpp
opengl/aulas/03-ex/: README.md  compile_commands.json  main.cpp
opengl/aulas/04-ex/: main.cpp
opengl/aulas/05-ex/: README.md  main.cpp
opengl/aulas/06-ex/: README.md  main.cpp
opengl/aulas/07-ex/: README.md  main.cpp
opengl/aulas/08-ex/: main.cpp
opengl/aulas/09-ex/: Makefile  compile_commands.json  main.cpp
opengl/aulas/10-ex/: README.md  main.cpp
opengl/gl_textures_tutorial/: .yabs  CMakeLists.txt
polinomio/01/: Makefile  main.cpp
ranges/01/: Makefile  compile_commands.json
ranges/01/.cache/clangd/index/: main.cpp.0D682FA793160F5D.idx
ranges/02/: main  main.cpp
ranges/03/: Makefile  main  main.cpp
ranges/04/: main  main.cpp
ranges/05/: .gitignore  main.cpp
ranges/06/: Makefile  README.md  main.cpp  matriz.cpp
ranges/07/: main.cpp
ranges/08/: .gitignore  README.md  main.cpp
ranges/09/: .gitignore  Makefile  README.md  main.cpp
template/01/: main.cpp
template/02/: main.cpp
template/03/: README.md
template/04/: main.cpp
template/04/.cache/clangd/index/: main.cpp.625D91B2F444627F.idx
template/05/: main.cpp
template/06/: main.cpp
template/07/: main.cpp
template/08/: main.cpp
template/09/: main.cpp
template/10/: main.cpp
template/11/: main.cpp
template/13/: main.cpp
tuplas/01/: README.md  main.cpp
tuplas/01-ex/: .gitignore
tuplas/02/: README.md
tuplas/02-ex/: main.cpp
tuplas/03/: main.cpp
tuplas/03-ex/: Makefile
tuplas/04/: main.cpp
tuplas/05/: README.md
tuplas/05-ex/: main.cpp
tuplas/06-ex/: .env  README.md  main.cpp
v4l/01/: README.md  main.c
v4l/02/: astyle.cfg  main.c
v4l/03/: README.md  main.c
v4l/04/: Makefile  README.md  convert.lua  main.c
wxWidgets/01/: Existe std.range ?.md  Makefile  main.cpp  spinapp.cpp
